# hack

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  configure.sh
01/: DMux4Way.hdl  DMux8Way.hdl  Mux8Way16.hdl  Or.hdl  Or16.hdl
02/: ALU.hdl  Add16.hdl  FullAdder.hdl  HalfAdder.hdl  Inc16.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
CMakeModules/: FindCheck.cmake
include/: arithmetic.h  computer.h  gates.h  sequential.h
logicgates/: And.hdl  DMux.hdl  Mux.hdl  Mux4Way16.hdl  Not.hdl  Not16.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
src/: CMakeLists.txt  main.c
src/arithmetic/: adders.c  alu.c
src/gates/: basic.c  multibit.c  multiway.c
src/sequential/: cells.c
tests/: CMakeLists.txt  check_gates.c  test_chips.c  test_gates.c
